Use Springs JWT processing, use common-dtos module